k8s/translation-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translation-service
  namespace: kundea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: translation-service
  template:
    metadata:
      labels:
        app: translation-service
    spec:
      containers:
      - name: translation-service
        image: ghcr.io/apipinic/translation-service:latest
        ports:
        - containerPort: 5001  # Correct port for the translation service
      imagePullSecrets:
      - name: ghcr-secret  # Reference the secret
