k8s/login-ingress2.yaml
apiVersion: v1
kind: Service
metadata:
  name: translation-service
  namespace: kundea
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:660242195002:certificate/ac064d9a-1c26-48a1-95cc-863e639c6dfa
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
  labels:
    app: translation-service
spec:
  selector:
    app: translation-service
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: LoadBalancer
