k8s/login-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-service
  namespace: kundea
spec:
  selector:
    app: login-service
  ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
