k8s/login-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translation-alb-ingress
  namespace: kundea
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:660242195002:certificate/83cc3b71-7d65-4476-b7b9-516374638473
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: translation-cloud.at
      http:
        paths:
          - path: /             # Main path routes to login-service
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 5000
          - path: /login/health # Separate health check for login-service
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 5000
          - path: /transcribe   # Route to translation-service
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          - path: /translate_live # Route to translation-service
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          - path: /translation/health # Separate health check for translation-service
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
